fixed the styles and wrapped the footer in memo

--- a/src/features/TotalDetailsList/ui/TotalDetailsList.module.scss
+++ b/src/features/TotalDetailsList/ui/TotalDetailsList.module.scss
@@ -1,5 +1,5 @@
 .totalDetailsList {
   background-color: var(--btn-gray-color);
   padding: 32px 0;
-  border-radius: 0 5px 5px 5px;
+  border-radius: 5px;
 }
